Fixed width & height of image carousel, fixed some layout issues in product description

--- a/sass/layout/_carousel.scss
+++ b/sass/layout/_carousel.scss
@@ -4,6 +4,12 @@
 
 */
 
+.carousel {
+  width: 560px;
+  height: 365px;
+  background-color: $light-grey;
+}
+
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
@@ -14,7 +20,7 @@
   margin-left: -30%;
   text-align: center;
   list-style: none;
-  
+
   li {
     width: 12px;
     height: 12px;
